2014-03-05  Gerrit Holl  <gerrit.holl@utoronto.ca>

	* pyatmlab-0-0-10

	* pyatmlab/dataset.py:

	- Started classes abstracting datasets

2014-02-12  Gerrit Holl  <gerrit.holl@smhi.se>

	* pyatmlab-0-0-9

	* pyatmlab/db.py(AtmosphericDatabase):

	- Added __getitem__ and __setitem__ ability to set new fields, i.e.
	db["IWV"] = some_calculation(db.data).

	* pyatmlab/instruments.py:

	- Fix some small buggies

2014-01-10  Gerrit Holl  <gerrit.holl@smhi.se>

	* pyatmlab-0-0-8

	* pyatmlab/physics.py:

	(mixingratio2density): Expand doc

	(rh2mixingratio): added

	(specific2iwv): Fix doc

	(rh2iwv): added

	(mixingratio2iwv): added

	* pyatmlab/arts.py: Removed, unused

	* pyatmlab/{graphics,instruments}: Do not expose 'now'

	* pyatmlab/tools.py: Fix sphinx-syntax-error in docstring

	* doc/source/index.rst:

	Added db, instruments

2014-01-09  Gerrit Holl  <gerrit.holl@smhi.se>

	* pyatmlab-0-0-7

	* pyatmlab/graphics.py:
	
	(print_or_show): Write ints as ints

	(datadir): Move to io.py

	* pyatmlab/instruments.py: Added.  Contains classes to describe
	instruments, channels, write out SRFs, and more.  Mostly copied from
	PyARTS.  Also contains some channel definitions.

	* pyatmlab/io.py:

	(write_matrix_as_latex_table): Added.  Somewhat inflexible code to
	write out a 2-D array as a LaTeX table.

	(datadir): Moved from graphics.py

	* pyatmlab/physics.py:

	(wavelength2frequency) (wavenumber2frequency) (frequency2wavelength)
	(frequency2wavenumber): Added.  Mostly copied from PyARTS.

	* pyatmlab/tools.py:

	(validate): Validate function with arguments, using annotations.

	(validator): Decorator to do the same

2013-12-17  Gerrit Holl  <gerrit.holl@smhi.se>

	* pyatmlab-0-0-6

	* doc/source/index.rst: Add new modules

	* pyatmlab/constants.py: Added.  Various constants.

	* pyatmlab/io.py(get_chevallier_arts_path):  Added.  Return path to
	Chevallier-formatted-for-ARTS data.  Does not add any dependency.

	* pyatmlab/math.py: Added.  Small maths utilities.
